fix: update psr-4

--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,10 @@
   "minimum-stability": "dev",
   "autoload": {
     "psr-4": {
-      "Sammy\\": "Sammy/"
+      "Sammy\\Packs\\": "Sammy/"
     },
     "psr-0": {
-      "Sammy\\": "Sammy/"
+      "Sammy\\Packs\\": "Sammy/"
     },
     "classmap": [
       "core/"
