fix: map Sammy Directory

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
       "Sammy\\Packs\\": "Sammy/"
     },
     "classmap": [
-      "core/"
+      "core/",
+      "Sammy/"
     ]
   },
   "keywords": [
