--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,6 @@
     "wiki": "https://github.com/php-module/yaml-lite/wiki"
   },
   "require": {
-    "php": "^5.6.20",
-    "php_modules/include-all": "^1.0.1"
+    "php": "^5.6.20"
   }
 }
